--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,34 +26,7 @@
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <widget class="QTextEdit" name="memoEditor">
-      <property name="minimumSize">
-       <size>
-        <width>0</width>
-        <height>0</height>
-       </size>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QListWidget" name="titleDisplay">
-      <property name="maximumSize">
-       <size>
-        <width>120</width>
-        <height>16777215</height>
-       </size>
-      </property>
-      <property name="dragDropMode">
-       <enum>QAbstractItemView::InternalMove</enum>
-      </property>
-      <property name="defaultDropAction">
-       <enum>Qt::TargetMoveAction</enum>
-      </property>
-     </widget>
-    </item>
-   </layout>
+   <layout class="QHBoxLayout" name="horizontalLayout"/>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -66,36 +39,56 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>&amp;File</string>
+     <string>File(&amp;F)</string>
     </property>
-    <addaction name="actionOpen"/>
-    <addaction name="actionClose"/>
+    <addaction name="actNew"/>
+    <addaction name="actOpen"/>
     <addaction name="separator"/>
-    <addaction name="actionSave"/>
-    <addaction name="actionSave_As"/>
+    <addaction name="actSave"/>
+    <addaction name="actSaveAs"/>
     <addaction name="separator"/>
-    <addaction name="actionQuit"/>
+    <addaction name="actClose"/>
+    <addaction name="separator"/>
+    <addaction name="actQuit"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
-     <string>Edit</string>
+     <string>Edit(&amp;E)</string>
     </property>
-    <addaction name="action_Add"/>
-    <addaction name="action_Insert"/>
-    <addaction name="action_Delete"/>
+    <addaction name="actUndo"/>
+    <addaction name="actRedo"/>
     <addaction name="separator"/>
-    <addaction name="actionSort_A_Z"/>
-    <addaction name="actionSort_Z_A"/>
+    <addaction name="actCut"/>
+    <addaction name="actCopy"/>
+    <addaction name="actPaste"/>
+    <addaction name="actErase"/>
+    <addaction name="separator"/>
+    <addaction name="actSelectAll"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
-     <string>Help</string>
+     <string>Help(&amp;H)</string>
     </property>
-    <addaction name="actionAbout_Qt"/>
-    <addaction name="actionAbout_Nmemo"/>
+    <addaction name="actAboutQt"/>
+    <addaction name="actAboutApp"/>
+   </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View(&amp;V)</string>
+    </property>
+    <addaction name="actFullscreen"/>
+   </widget>
+   <widget class="QMenu" name="menuBook">
+    <property name="title">
+     <string>Book(&amp;B)</string>
+    </property>
+    <addaction name="actAddBook"/>
+    <addaction name="actDeleteBook"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
+   <addaction name="menuBook"/>
+   <addaction name="menuView"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
@@ -105,93 +98,135 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
-   <addaction name="action_Add"/>
-   <addaction name="action_Insert"/>
-   <addaction name="action_Delete"/>
    <addaction name="separator"/>
-   <addaction name="actionSort_A_Z"/>
-   <addaction name="actionSort_Z_A"/>
+   <addaction name="actAddBook"/>
+   <addaction name="actDeleteBook"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
-  <action name="actionOpen">
+  <action name="actOpen">
    <property name="text">
-    <string>&amp;Open</string>
+    <string>Open(O)</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
    </property>
   </action>
-  <action name="actionClose">
+  <action name="actClose">
    <property name="text">
-    <string>Close</string>
+    <string>Close(&amp;C)</string>
    </property>
   </action>
-  <action name="actionSave">
+  <action name="actSave">
    <property name="text">
-    <string>&amp;Save</string>
+    <string>Save(&amp;S)</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
    </property>
   </action>
-  <action name="actionSave_As">
+  <action name="actSaveAs">
    <property name="text">
-    <string>Save As</string>
+    <string>Save As(&amp;A)</string>
    </property>
   </action>
-  <action name="actionQuit">
+  <action name="actQuit">
    <property name="text">
-    <string>&amp;Quit</string>
+    <string>Quit(&amp;Q)</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Q</string>
    </property>
   </action>
-  <action name="actionAbout_Qt">
+  <action name="actAboutQt">
    <property name="text">
     <string>About Qt</string>
    </property>
   </action>
-  <action name="actionAbout_Nmemo">
+  <action name="actAboutApp">
    <property name="text">
     <string>About Nmemo</string>
    </property>
   </action>
-  <action name="action_Add">
+  <action name="actNew">
    <property name="text">
-    <string>&amp;Add</string>
+    <string>New(&amp;N)</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
    </property>
   </action>
-  <action name="action_Insert">
+  <action name="actUndo">
    <property name="text">
-    <string>&amp;Insert</string>
+    <string>Undo(&amp;U)</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+I</string>
+    <string>Ctrl+Z</string>
    </property>
   </action>
-  <action name="action_Delete">
+  <action name="actRedo">
    <property name="text">
-    <string>&amp;Delete</string>
+    <string>Redo(&amp;R)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+Z</string>
    </property>
   </action>
-  <action name="actionSort_A_Z">
+  <action name="actCut">
    <property name="text">
-    <string>Sort AtoZ</string>
+    <string>Cut(&amp;T)</string>
    </property>
-   <property name="iconText">
-    <string>AtoZ</string>
+   <property name="shortcut">
+    <string>Ctrl+X</string>
    </property>
   </action>
-  <action name="actionSort_Z_A">
+  <action name="actCopy">
    <property name="text">
-    <string>Sort ZtoA</string>
+    <string>Copy(&amp;C)</string>
    </property>
-   <property name="iconText">
-    <string>ZtoA</string>
+   <property name="shortcut">
+    <string>Ctrl+C</string>
+   </property>
+  </action>
+  <action name="actPaste">
+   <property name="text">
+    <string>Paste(&amp;P)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+V</string>
+   </property>
+  </action>
+  <action name="actErase">
+   <property name="text">
+    <string>Erase(&amp;D)</string>
+   </property>
+  </action>
+  <action name="actSelectAll">
+   <property name="text">
+    <string>SelectAll(&amp;A)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+A</string>
+   </property>
+  </action>
+  <action name="actAddBook">
+   <property name="text">
+    <string>Add(&amp;A)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+N</string>
+   </property>
+  </action>
+  <action name="actDeleteBook">
+   <property name="text">
+    <string>Delete(&amp;D)</string>
+   </property>
+  </action>
+  <action name="actFullscreen">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Fullscreen(&amp;F)</string>
    </property>
   </action>
  </widget>
