--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -95,6 +95,9 @@
     <addaction name="separator"/>
     <addaction name="actMoveNext"/>
     <addaction name="actMovePrevious"/>
+    <addaction name="separator"/>
+    <addaction name="actSort_AtoZ"/>
+    <addaction name="actSort_ZtoA"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
@@ -112,6 +115,9 @@
    <addaction name="separator"/>
    <addaction name="actAddBook"/>
    <addaction name="actDeleteBook"/>
+   <addaction name="separator"/>
+   <addaction name="actSort_AtoZ"/>
+   <addaction name="actSort_ZtoA"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actOpen">
@@ -291,6 +297,25 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Up</string>
+   </property>
+  </action>
+  <action name="actSort_AtoZ">
+   <property name="text">
+    <string>Sort AtoZ</string>
+   </property>
+   <property name="iconText">
+    <string>AtoZ</string>
+   </property>
+   <property name="toolTip">
+    <string>Sort AtoZ</string>
+   </property>
+  </action>
+  <action name="actSort_ZtoA">
+   <property name="text">
+    <string>Sort ZtoA</string>
+   </property>
+   <property name="iconText">
+    <string>ZtoA</string>
    </property>
   </action>
  </widget>
