--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -78,20 +78,23 @@
     </property>
     <addaction name="actFullscreen"/>
     <addaction name="separator"/>
+    <addaction name="actEditPlainText"/>
+    <addaction name="actEditRichText"/>
+    <addaction name="separator"/>
     <addaction name="actNextTab"/>
     <addaction name="actPreviousTab"/>
     <addaction name="separator"/>
-    <addaction name="actNextBook"/>
-    <addaction name="actPreviousBook"/>
+    <addaction name="actNextItem"/>
+    <addaction name="actPreviousItem"/>
    </widget>
    <widget class="QMenu" name="menuBook">
     <property name="title">
      <string>Book(&amp;B)</string>
     </property>
-    <addaction name="actAddBook"/>
-    <addaction name="actDeleteBook"/>
+    <addaction name="actAddItem"/>
+    <addaction name="actDeleteItem"/>
     <addaction name="separator"/>
-    <addaction name="actRenameBook"/>
+    <addaction name="actRenameItem"/>
     <addaction name="separator"/>
     <addaction name="actMoveNext"/>
     <addaction name="actMovePrevious"/>
@@ -113,8 +116,9 @@
     <bool>false</bool>
    </attribute>
    <addaction name="separator"/>
-   <addaction name="actAddBook"/>
-   <addaction name="actDeleteBook"/>
+   <addaction name="actAddItem"/>
+   <addaction name="actDeleteItem"/>
+   <addaction name="actRenameItem"/>
    <addaction name="separator"/>
    <addaction name="actSort_AtoZ"/>
    <addaction name="actSort_ZtoA"/>
@@ -124,6 +128,9 @@
    <property name="text">
     <string>Open(O)</string>
    </property>
+   <property name="toolTip">
+    <string>Open file</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
    </property>
@@ -132,10 +139,16 @@
    <property name="text">
     <string>Close(&amp;C)</string>
    </property>
+   <property name="toolTip">
+    <string>Close file</string>
+   </property>
   </action>
   <action name="actSave">
    <property name="text">
     <string>Save(&amp;S)</string>
+   </property>
+   <property name="toolTip">
+    <string>Save the current file</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
@@ -145,10 +158,16 @@
    <property name="text">
     <string>Save As(&amp;A)</string>
    </property>
+   <property name="toolTip">
+    <string>Save the current file as the name</string>
+   </property>
   </action>
   <action name="actQuit">
    <property name="text">
     <string>Quit(&amp;Q)</string>
+   </property>
+   <property name="toolTip">
+    <string>Quit this application</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Q</string>
@@ -168,6 +187,9 @@
    <property name="text">
     <string>New(&amp;N)</string>
    </property>
+   <property name="toolTip">
+    <string>New file</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
    </property>
@@ -175,6 +197,9 @@
   <action name="actUndo">
    <property name="text">
     <string>Undo(&amp;U)</string>
+   </property>
+   <property name="toolTip">
+    <string>Undo</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Z</string>
@@ -184,6 +209,9 @@
    <property name="text">
     <string>Redo(&amp;R)</string>
    </property>
+   <property name="toolTip">
+    <string>Redo</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+Shift+Z</string>
    </property>
@@ -191,6 +219,9 @@
   <action name="actCut">
    <property name="text">
     <string>Cut(&amp;T)</string>
+   </property>
+   <property name="toolTip">
+    <string>Cut</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+X</string>
@@ -200,6 +231,9 @@
    <property name="text">
     <string>Copy(&amp;C)</string>
    </property>
+   <property name="toolTip">
+    <string>Copy</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+C</string>
    </property>
@@ -207,6 +241,9 @@
   <action name="actPaste">
    <property name="text">
     <string>Paste(&amp;P)</string>
+   </property>
+   <property name="toolTip">
+    <string>Paste</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+V</string>
@@ -216,26 +253,44 @@
    <property name="text">
     <string>Erase(&amp;D)</string>
    </property>
+   <property name="toolTip">
+    <string>Erase</string>
+   </property>
   </action>
   <action name="actSelectAll">
    <property name="text">
     <string>SelectAll(&amp;A)</string>
    </property>
+   <property name="toolTip">
+    <string>SelectAll</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+A</string>
    </property>
   </action>
-  <action name="actAddBook">
+  <action name="actAddItem">
    <property name="text">
     <string>Add(&amp;A)</string>
+   </property>
+   <property name="iconText">
+    <string>Add</string>
+   </property>
+   <property name="toolTip">
+    <string>Add a new item</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+N</string>
    </property>
   </action>
-  <action name="actDeleteBook">
+  <action name="actDeleteItem">
    <property name="text">
     <string>Delete(&amp;D)</string>
+   </property>
+   <property name="iconText">
+    <string>Delete</string>
+   </property>
+   <property name="toolTip">
+    <string>Delete the item</string>
    </property>
   </action>
   <action name="actFullscreen">
@@ -245,58 +300,88 @@
    <property name="text">
     <string>Fullscreen(&amp;F)</string>
    </property>
+   <property name="toolTip">
+    <string>Toggle Fullscreen mode</string>
+   </property>
   </action>
-  <action name="actRenameBook">
+  <action name="actRenameItem">
    <property name="text">
     <string>Rename(&amp;R)</string>
+   </property>
+   <property name="iconText">
+    <string>Rename</string>
+   </property>
+   <property name="toolTip">
+    <string>Rename the item</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+M</string>
    </property>
   </action>
   <action name="actMoveNext">
    <property name="text">
     <string>MoveNext(&amp;N)</string>
    </property>
+   <property name="toolTip">
+    <string>Move the item to Next</string>
+   </property>
    <property name="shortcut">
-    <string>Ctrl+Shift+Down</string>
+    <string>Ctrl+Down</string>
    </property>
   </action>
   <action name="actMovePrevious">
    <property name="text">
     <string>MovePrevious(&amp;P)</string>
    </property>
+   <property name="toolTip">
+    <string>Move the item to Previous</string>
+   </property>
    <property name="shortcut">
-    <string>Ctrl+Shift+Up</string>
+    <string>Ctrl+Up</string>
    </property>
   </action>
   <action name="actNextTab">
    <property name="text">
     <string>NextTab</string>
    </property>
+   <property name="toolTip">
+    <string>Change to Next tab</string>
+   </property>
    <property name="shortcut">
-    <string>Ctrl+Right</string>
+    <string>Alt+Right</string>
    </property>
   </action>
   <action name="actPreviousTab">
    <property name="text">
     <string>PreviousTab</string>
    </property>
+   <property name="toolTip">
+    <string>Change to Previous tab</string>
+   </property>
    <property name="shortcut">
-    <string>Ctrl+Left</string>
+    <string>Alt+Left</string>
    </property>
   </action>
-  <action name="actNextBook">
+  <action name="actNextItem">
    <property name="text">
-    <string>NextBook</string>
+    <string>NextItem</string>
+   </property>
+   <property name="toolTip">
+    <string>Change to Next Item</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+Down</string>
+    <string>Alt+Down</string>
    </property>
   </action>
-  <action name="actPreviousBook">
+  <action name="actPreviousItem">
    <property name="text">
-    <string>PreviousBook</string>
+    <string>PreviousItem</string>
+   </property>
+   <property name="toolTip">
+    <string>Change to Previous Item</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+Up</string>
+    <string>Alt+Up</string>
    </property>
   </action>
   <action name="actSort_AtoZ">
@@ -307,7 +392,7 @@
     <string>AtoZ</string>
    </property>
    <property name="toolTip">
-    <string>Sort AtoZ</string>
+    <string>Sort items as AtoZ</string>
    </property>
   </action>
   <action name="actSort_ZtoA">
@@ -316,6 +401,25 @@
    </property>
    <property name="iconText">
     <string>ZtoA</string>
+   </property>
+   <property name="toolTip">
+    <string>Sort items as ZtoA</string>
+   </property>
+  </action>
+  <action name="actEditPlainText">
+   <property name="text">
+    <string>PlainText</string>
+   </property>
+   <property name="toolTip">
+    <string>Set Plain Text mode</string>
+   </property>
+  </action>
+  <action name="actEditRichText">
+   <property name="text">
+    <string>RichText</string>
+   </property>
+   <property name="toolTip">
+    <string>Set Rich Text mode</string>
    </property>
   </action>
  </widget>
